--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": ""
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap ./test"
   },
   "author": {
     "name": "Hendrik Cech",
