--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "qs": "~0.5.5"
+    "qs": "~0.5.5",
+    "hyperquest": "~0.1.5",
+    "concat-stream": "~0.1.1"
   },
   "devDependencies": {
     "vows": "~0.7.0"
