--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "concat-stream": "~1.4.1",
     "hawk": "~2.1.0",
-    "uri-template": "~0.4.1"
+    "uri-template": "~0.4.1",
+    "debug": "~0.7.4"
   },
   "devDependencies": {
     "tape": "~2.3.2"
