--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "pretest": "node ./tests/configCheck.js",
     "test": "tape ./tests/*/*.js",
-    "build": "browserify index.js -s request | uglifyjs > umd.min.js"
+    "build": "browserify index.js -s request --ignore debug | uglifyjs > umd.min.js"
   },
   "author": {
     "name": "Hendrik Cech",
@@ -24,12 +24,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "concat-stream": "~1.4.1",
-    "hawk": "~2.1.0",
-    "uri-template": "~0.4.1",
+    "hawk": "~2.1.3",
     "debug": "~0.7.4"
   },
   "devDependencies": {
-    "tape": "~2.3.2"
+    "tape": "~2.12.0"
   }
 }
