--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tent-request",
-  "description": "Performes requests against a Tent server",
+  "description": "A Tent client library.",
   "version": "0.5.1",
   "main": "index.js",
   "keywords": [
@@ -16,7 +16,7 @@
   "scripts": {
     "pretest": "node ./tests/configCheck.js",
     "test": "tape ./tests/*/*.js",
-    "build": "browserify index.js -s request --ignore debug | uglifyjs > umd.min.js"
+    "build": "rm -rf node_modules/dicer/node_modules/readable-stream && browserify index.js -s request --ignore debug --ignore-missing | uglifyjs > umd.min.js"
   },
   "author": {
     "name": "Hendrik Cech",
@@ -25,7 +25,10 @@
   "license": "MIT",
   "dependencies": {
     "hawk": "~2.1.3",
-    "debug": "~0.7.4"
+    "debug": "^0.8.0",
+    "multipart-stream": "^1.0.0",
+    "dicer": "^0.2.3",
+    "http-string-parser": "0.0.4"
   },
   "devDependencies": {
     "tape": "~2.12.0"
